--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,19 @@
 /contracts/client/build
+
+
 /contracts/manager/build
 
 /private_data.py
+
+private_data.py
 /handle.json
+contracts
+handle.json
+venv
+/venv
 
 /__pycache__
+__pycache__
 /env
 
 /frontend/node_modules
